PY-84995 False-positive: Can't assign to dataclasses with slots=True
(cherry picked from commit c405f44b70c044c6c1855615523dc9869bf45be1)

IJ-MR-186218

GitOrigin-RevId: 5425a9b570d2effd4443525549b18fd8a3e5ba54